--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,8 @@
                 <img id="second" src="assets/2.jpg"> <!--Adding 2nd image to assets -->
                 <img id="third" src="assets/3.jpg"> 
                 <img id="fourth" src="assets/4.jpg">
-                <img id="fifth" src="assets/4.jpg">
-                <img id="sixth" src="assets/5.jpg">
+                <img id="fifth" src="assets/1-bg.jpg.jpg">
+                <img id="sixth" src="assets/1-bg.jpg.jpg">
                 
                 <!--Task 2: Add Assets for remaining images start at line 19..
                 Make sure they have different id.
